Logs Endpoint For Admin Panel
